--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          </div>
       </header>
       <section class="row">
-         <img src="./img/banner_portada.png" alt="">
+         <img class="w-100"  src="./img/banner_portada.jpg" alt="">
       </section>
       <!-- Primer Carrusel -->
       <section class="row grayBg py-5">
