--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
          </div>
       </header>
       <section class="row">
-         <img class="w-100"  src="./img/banner_portada.jpg" alt="">
+         <div class="col-12">
+            <img class="w-100"  src="./img/banner_portada.jpg" alt="">
+         </div>
       </section>
       <!-- Primer Carrusel -->
       <section class="row grayBg py-5">
