Banner and responsive

--- a/ejemplo.html
+++ b/ejemplo.html
@@ -1,187 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/bootstrap.css">
-    <link rel="stylesheet" href="./css/style.css">
-
-<style>
-  /*********************************************************************/
-/* Bootstrap 4 Multiple Item Carousel */
-/*********************************************************************/
-/* medium - display 2  */
-
-</style>
+  <meta charset="UTF-8">
+  <title>CodePen - Flickity - groupCells</title>
+  <meta name="viewport" content="width=device-width">
+  <link rel='stylesheet' href='https://npmcdn.com/flickity@2/dist/flickity.css'>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./css/owl.carousel.min.css">
 
 </head>
 <body>
 
-  <div class="container text-center">
-    <div class="row mx-auto my-auto">
-        <div id="myCarousel" class="carousel slide w-100" data-ride="carousel">
-            <div class="carousel-inner w-100" role="listbox">
-                <div class="carousel-item active">
-                    <div class="col-lg-4 col-md-6">
-                      <div
-                      class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
-                    >
-                      <div class="row p-2">
-                        <div class="col-sm-7">
-                          <img src="./img/slide/foto2.png" alt="" />
-                        </div>
-                        <div
-                          class="col-sm-5 d-flex align-items-center ayuda_enlace position-relative"
-                        >
-                          <div>
-                            <p class="font-weight-bold">DONACIÓN ACTUAL (Bs.)</p>
-                            <span class="font-weight-bold color text-primary">1500</span>
-                            <p class="border-top mt-3">
-                              Fecha de validez <br />
-                              <span class="text-secondary">30/04/2020</span>
-                            </p>
-                          </div>
-                          <a
-                            href="#"
-                            class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center"
-                          >
-                            <div>
-                              <img
-                                src="./img/isologo_banner.png"
-                                alt=""
-                                style="max-width: 40px;"
-                                class="mx-auto"
-                              />
-                              <p class="text-light">DONAR</p>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="col-lg-4 col-md-6">
-                      <div
-                      class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
-                    >
-                      <div class="row p-2">
-                        <div class="col-sm-7">
-                          <img src="./img/slide/foto2.png" alt="" />
-                        </div>
-                        <div
-                          class="col-sm-5 d-flex align-items-center ayuda_enlace position-relative"
-                        >
-                          <div>
-                            <p class="font-weight-bold">DONACIÓN ACTUAL (Bs.)</p>
-                            <span class="font-weight-bold color text-primary">1500</span>
-                            <p class="border-top mt-3">
-                              Fecha de validez <br />
-                              <span class="text-secondary">30/04/2020</span>
-                            </p>
-                          </div>
-                          <a
-                            href="#"
-                            class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center"
-                          >
-                            <div>
-                              <img
-                                src="./img/isologo_banner.png"
-                                alt=""
-                                style="max-width: 40px;"
-                                class="mx-auto"
-                              />
-                              <p class="text-light">DONAR</p>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="col-lg-4 col-md-6">
-                      <div
-                      class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
-                    >
-                      <div class="row p-2">
-                        <div class="col-sm-7">
-                          <img src="./img/slide/foto2.png" alt="" />
-                        </div>
-                        <div
-                          class="col-sm-5 d-flex align-items-center ayuda_enlace position-relative"
-                        >
-                          <div>
-                            <p class="font-weight-bold">DONACIÓN ACTUAL (Bs.)</p>
-                            <span class="font-weight-bold color text-primary">1500</span>
-                            <p class="border-top mt-3">
-                              Fecha de validez <br />
-                              <span class="text-secondary">30/04/2020</span>
-                            </p>
-                          </div>
-                          <a
-                            href="#"
-                            class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center"
-                          >
-                            <div>
-                              <img
-                                src="./img/isologo_banner.png"
-                                alt=""
-                                style="max-width: 40px;"
-                                class="mx-auto"
-                              />
-                              <p class="text-light">DONAR</p>
-                            </div>
-                          </a>
-                        </div>
-                      </div>
-                    </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <div class="col-lg-4 col-md-6">
-                        <img class="img-fluid" src="http://placehold.it/350x180?text=4">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-  
 
+  <div class="owl-carousel owl-theme">
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+    <div> Your Content </div>
+  </div>
 
-   <script src="./js/jquery.min.js" />
-</script>
-<script src="./js/bootstrap.min.js" />
-</script>
-<script src="./js/popper.min.js"></script>
-
-<script>
-$('#myCarousel').carousel({
-    interval: 4000
-})
-
-$('.carousel .carousel-item').each(function() {
-    var minPerSlide = 4;
-    var next = $(this).next();
-    if (!next.length) {
-        next = $(this).siblings(':first');
-    }
-    next.children(':first-child').clone().appendTo($(this));
-
-    for (var i = 0; i < minPerSlide; i++) {
-        next = next.next();
-        if (!next.length) {
-            next = $(this).siblings(':first');
-        }
-
-        next.children(':first-child').clone().appendTo($(this));
-    }
-});
-
-
-</script>
-
+  <script src="./js/jquery.min.js" />
+  <script src="./js/owl.carousel.min.js" />
 </body>
 </html>
