--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          </div>
       </header>
       <section class="row">
-         <div class="col-12">
+         <div class="col-12 p-0">
             <img class="w-100"  src="./img/banner_portada.jpg" alt="">
          </div>
       </section>
@@ -48,7 +48,7 @@
                              >
                                <div class="row p-2">
                                  <div class="col-sm-7">
-                                   <img src="./img/slide/foto1.png" alt="" />
+                                   <img class="w-100" src="./img/slide/foto1.png" alt="" />
                                  </div>
                                  <div
                                    class="col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
@@ -87,7 +87,7 @@
                              >
                                <div class="row p-2">
                                  <div class="col-sm-7">
-                                   <img src="./img/slide/foto2.png" alt="" />
+                                   <img class="w-100" src="./img/slide/foto2.png" alt="" />
                                  </div>
                                  <div
                                    class="col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
@@ -126,7 +126,7 @@
                              >
                                <div class="row p-2">
                                  <div class="col-sm-7">
-                                   <img src="./img/slide/foto3.png" alt="" />
+                                   <img class="w-100" src="./img/slide/foto3.png" alt="" />
                                  </div>
                                  <div
                                    class="col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
@@ -199,30 +199,30 @@
                <div class="col-10">
                   <!--Start carousel-->
                   <div id="carouselEmp" class="carousel slide w-100" data-ride="carousel">
-                     <div class="carousel-inner w-100" role="listbox">
-                         <div class="carousel-item active">
-                             <div class="col-lg-3 col-md-6">
-                                 <img class="img-fluid" src="./img/apoyan/empresa1.png">
-                             </div>
-                         </div>
-                         <div class="carousel-item">
-                             <div class="col-lg-3 col-md-6">
-                                 <img class="img-fluid" src="./img/apoyan/empresa2.png">
-                             </div>
-                         </div>
-                         <div class="carousel-item">
-                             <div class="col-lg-3 col-md-6">
-                                 <img class="img-fluid" src="./img/apoyan/empresa3.png">
-                             </div>
-                         </div>
-                         <div class="carousel-item">
-                             <div class="col-lg-3 col-md-6">
-                                 <img class="img-fluid" src="./img/apoyan/empresa4.png">
-                             </div>
-                         </div>
-                     </div>
+                    <div class="carousel-inner w-100" role="listbox">
+                        <div class="carousel-item active">
+                            <div class="col-lg-4 col-md-6">
+                                <img class="img-fluid" src="./img/apoyan/empresa1.png">
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-lg-4 col-md-6">
+                                <img class="img-fluid" src="./img/apoyan/empresa2.png">
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-lg-4 col-md-6">
+                                <img class="img-fluid" src="./img/apoyan/empresa3.png">
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="col-lg-4 col-md-6">
+                                <img class="img-fluid" src="./img/apoyan/empresa4.png">
+                            </div>
+                        </div>
 
-                 </div>
+                    </div>
+                </div>
                   <!--End carousel-->
                </div>
                <div class="col-1 d-flex align-items-center justify-content-center"><a href="#carouselEmp"
@@ -261,10 +261,6 @@
 
 // $('#myCarousel').carousel({
 //     interval: 5000
-// })
-
-// $('#carouselEmp').carousel({
-//     interval: 3000
 // })
 
 $('.carousel .carousel-item').each(function() {
