--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                </div>
                <div class="col-10" style="font-size: .8rem;">
                   <!--Start carousel-->
-                  <div id="myCarousel" class="carousel slide w-100" data-ride="carousel">
+                  <div id="myCarousel" class="carousel w-100" data-ride="carousel">
                      <div class="carousel-inner w-100" role="listbox">
                          <div class="carousel-item active">
                              <div class="col-lg-4 col-md-6">
@@ -58,7 +58,7 @@
                                    <div>
                                      <p class="font-weight-bold">DONACIÓN ACTUAL (Bs.)</p>
                                      <span class="font-weight-bold color text-primary">1500</span>
-                                     <p class="border-top mt-3">
+                                     <p class="border-top mt-3 pt-2">
                                        Fecha de validez <br />
                                        <span class="text-secondary">30/04/2020</span>
                                      </p>
@@ -97,7 +97,7 @@
                                    <div>
                                      <p class="font-weight-bold">DONACIÓN ACTUAL (Bs.)</p>
                                      <span class="font-weight-bold color text-primary">1500</span>
-                                     <p class="border-top mt-3">
+                                     <p class="border-top mt-3 pt-2">
                                        Fecha de validez <br />
                                        <span class="text-secondary">30/04/2020</span>
                                      </p>
@@ -136,7 +136,7 @@
                                    <div>
                                      <p class="font-weight-bold">DONACIÓN ACTUAL (Bs.)</p>
                                      <span class="font-weight-bold color text-primary">1500</span>
-                                     <p class="border-top mt-3">
+                                     <p class="border-top mt-3 pt-2">
                                        Fecha de validez <br />
                                        <span class="text-secondary">30/04/2020</span>
                                      </p>
