--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <a href="https://multipago.bo"><img src="./img/nuevo-logo-multipago.png" /></a>
          </div>
       </header>
-      <section class="row">
+      <section class="row p-0">
          <div class="col-12 p-0">
             <img class="w-100"  src="./img/banner_portada.jpg" alt="">
          </div>
-      </section>
+   </section>
       <!-- Primer Carrusel -->
       <section class="row grayBg py-5">
-         <h3 class="col-12 text-center font-weight-bold"><span class="textSpan">Campañas</span> de Donación</h3>
+         <h3 class="col-12 text-center font-weight-bold"><span class="textSpan">Campañas</span> d pt-4e Donación</h3>
          <!-- Carrusel de empresas -->
          <div class="my-5 text-center container-fluid">
             <div class="row d-flex align-items-center">
@@ -49,14 +49,14 @@
                                class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
                              >
                                <div class="row p-2">
-                                 <div class="col-sm-7">
+                                 <div class="col-sm-7 p-0">
                                    <img class="w-100" src="./img/slide/foto1.png" alt="" />
                                  </div>
                                  <div
-                                   class="col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
+                                   class="mMovil col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
                                  >
                                    <div>
-                                     <p class="font-weight-bold">DONACIÓN ACTUAL (Bs.)</p>
+                                     <p class="font-weight-bold pt-4">DONACIÓN ACTUAL (Bs.)</p>
                                      <span class="font-weight-bold color text-primary">1500</span>
                                      <p class="border-top mt-3 pt-2">
                                        Fecha de validez <br />
@@ -88,14 +88,14 @@
                                class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
                              >
                                <div class="row p-2">
-                                 <div class="col-sm-7">
+                                 <div class="col-sm-7 p-0 pad-10">
                                    <img class="w-100" src="./img/slide/foto2.png" alt="" />
                                  </div>
                                  <div
-                                   class="col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
+                                   class="mMovil col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
                                  >
                                    <div>
-                                     <p class="font-weight-bold">DONACIÓN ACTUAL (Bs.)</p>
+                                     <p class="font-weight-bold pt-4">DONACIÓN ACTUAL (Bs.)</p>
                                      <span class="font-weight-bold color text-primary">1500</span>
                                      <p class="border-top mt-3 pt-2">
                                        Fecha de validez <br />
@@ -127,14 +127,14 @@
                                class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
                              >
                                <div class="row p-2">
-                                 <div class="col-sm-7">
+                                 <div class="col-sm-7 p-0 pad-10">
                                    <img class="w-100" src="./img/slide/foto3.png" alt="" />
                                  </div>
                                  <div
-                                   class="col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
+                                   class="mMovil col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
                                  >
                                    <div>
-                                     <p class="font-weight-bold">DONACIÓN ACTUAL (Bs.)</p>
+                                     <p class="font-weight-bold pt-4">DONACIÓN ACTUAL (Bs.)</p>
                                      <span class="font-weight-bold color text-primary">1500</span>
                                      <p class="border-top mt-3 pt-2">
                                        Fecha de validez <br />
