--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    </section>
       <!-- Primer Carrusel -->
       <section class="row grayBg py-5">
-         <h3 class="col-12 text-center font-weight-bold"><span class="textSpan">Campañas</span> d pt-4e Donación</h3>
+         <h3 class="col-12 text-center font-weight-bold"><span class="textSpan">Campañas</span> de Donación</h3>
          <!-- Carrusel de empresas -->
          <div class="my-5 text-center container-fluid">
             <div class="row d-flex align-items-center">
