Ajust image logo

--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 <body>
    <div class="container-fluid">
       <header class="row header degree px-2 sticky-top">
-         <div class="col-6">
-            <a href="#"><img src="./img/logo_ayuda_cabecera.png" /></a>
+         <div class="col-6 d-flex align-items-center">
+            <a href="#"><img class="pt-2" src="./img/logo_ayuda_cabecera.png" style="max-width: 130px;" /></a>
          </div>
          <div class="col-6 d-flex align-items-center justify-content-end">
-            <a href="https://multipago.bo"><img src="./img/nuevo-logo-multipago.png" /></a>
+            <a href="https://multipago.bo"><img src="./img/nuevo-logo-multipago.svg"  style="max-width: 150px;" /></a>
+            <!-- <a href="https://multipago.bo"><img src="./img/multipago.svg" style="max-width: 150px;"/></a> -->
          </div>
       </header>
       <section class="row p-0">
