--- a/index.html
+++ b/index.html
@@ -31,7 +31,43 @@
       <section class="row grayBg py-5">
          <h3 class="col-12 text-center font-weight-bold"><span class="textSpan">Campañas</span> de Donación</h3>
          <!-- Carrusel de empresas -->
-         <div class="my-5 text-center container-fluid">
+         <div class="col-lg-4 col-md-6 mx-auto my-5">
+          <div class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
+        >
+          <div class="row p-2">
+            <div class="col-sm-7 p-0 pad-10">
+              <img class="w-100" src="./img/slide/foto2.png" alt="" />
+            </div>
+            <div
+              class="mMovil col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
+            >
+              <div class="text-center">
+                <p class="font-weight-bold pt-4">TOTAL RECAUDADO (Bs.)</p>
+                <span class="font-weight-bold color text-primary">1500</span>
+                <p class="border-top mt-3 pt-2">
+                  Fecha de validez <br />
+                  <span class="text-secondary">---</span>
+                </p>
+              </div>
+              <a
+                href="#"
+                class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center"
+              >
+                <div>
+                  <img
+                    src="./img/isologo_banner.png"
+                    alt=""
+                    style="max-width: 40px;"
+                    class="mx-auto"
+                  />
+                  <p class="text-light">DONAR</p>
+                </div>
+              </a>
+            </div>
+          </div>
+        </div>
+        </div>
+         <!-- <div class="my-5 text-center container-fluid">
             <div class="row d-flex align-items-center">
                <div class="col-1 d-flex align-items-center justify-content-center">
                   <a href="#myCarousel" role="button" data-slide="prev">
@@ -41,11 +77,11 @@
                   </a>
                </div>
                <div class="col-10" style="font-size: .8rem;">
-                  <!--Start carousel-->
+                  
                   <div id="myCarousel" class="carousel slide w-100" data-ride="carousel">
                      <div class="carousel-inner w-100" role="listbox">
                          <div class="carousel-item active">
-                             <div class="col-lg-4 col-md-6 p-0">
+                             <div class="col-lg-4 col-md-6">
                                <div
                                class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
                              >
@@ -84,7 +120,7 @@
                              </div>
                          </div>
                          <div class="carousel-item">
-                             <div class="col-lg-4 col-md-6 p-0">
+                             <div class="col-lg-4 col-md-6">
                                <div
                                class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
                              >
@@ -123,7 +159,7 @@
                              </div>
                          </div>
                          <div class="carousel-item">
-                             <div class="col-lg-4 col-md-6 p-0">
+                             <div class="col-lg-4 col-md-6">
                                <div
                                class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
                              >
@@ -163,7 +199,7 @@
                          </div>
                      </div>
                  </div>
-                  <!--End carousel-->
+                  
                </div>
                <div class="col-1 d-flex align-items-center justify-content-center"><a href="#myCarousel"
                      data-slide="next">
@@ -173,7 +209,7 @@
                   </a>
                </div>
             </div>
-         </div>
+         </div> -->
       </section>
       <!-- Frases de ayuda  -->
       <section class="row py-5 bgAyuda text-center">
