--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Ayuda una Causa </title>
+   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet"> 
    <link rel="stylesheet" href="./css/bootstrap.css">
    <link rel="stylesheet" href="./css/style.css">
    <link rel="stylesheet" href="./css/slick.css">
@@ -36,21 +37,23 @@
         >
           <div class="row p-2">
             <div class="col-sm-7 p-0 pad-10">
-              <img class="w-100" src="./img/slide/foto2.png" alt="" />
+              <a href="https://multipago.bo/protegeunavida">
+                <img class="w-100" src="./img/slide/foto2.png" alt="" />
+              </a>
             </div>
             <div
               class="mMovil col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
             >
               <div class="text-center">
                 <p class="font-weight-bold pt-4">TOTAL RECAUDADO (Bs.)</p>
-                <span class="font-weight-bold color text-primary">1500</span>
+                <span class="font-weight-bold color text-primary">1740</span>
                 <p class="border-top mt-3 pt-2">
                   Fecha de validez <br />
                   <span class="text-secondary">---</span>
                 </p>
               </div>
               <a
-                href="#"
+                href="https://multipago.bo/protegeunavida"
                 class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center"
               >
                 <div>
@@ -292,7 +295,7 @@
    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
    <script>
      $('.multiple-items').slick({
-       dots: true,
+     dots: true,
      infinite: true,
      speed: 300,
      dots: false,
