add column to Demos de Corazon

--- a/index.html
+++ b/index.html
@@ -32,44 +32,84 @@
       <section class="row grayBg py-5">
          <h3 class="col-12 text-center font-weight-bold"><span class="textSpan">Campañas</span> de Donación</h3>
          <!-- Carrusel de empresas -->
-         <div class="col-lg-4 col-md-6 mx-auto my-5">
-          <div class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
-        >
-          <div class="row p-2">
-            <div class="col-sm-7 p-0 pad-10">
-              <a href="https://multipago.bo/protegeunavida">
-                <img class="w-100" src="./img/slide/foto2.png" alt="" />
-              </a>
-            </div>
-            <div
-              class="mMovil col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
-            >
-              <div class="text-center">
-                <p class="font-weight-bold pt-4">TOTAL RECAUDADO (Bs.)</p>
-                <span class="font-weight-bold color text-primary">1740</span>
-                <p class="border-top mt-3 pt-2">
-                  Fecha de validez <br />
-                  <span class="text-secondary">---</span>
-                </p>
+         <div class="row mx-auto">
+          <div class="col-lg-5 col-md-6 mx-auto my-5">
+            <div class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
+          >
+            <div class="row p-2">
+              <div class="col-sm-7 p-0 pad-10">
+                <a href="https://multipago.bo/protegeunavida">
+                  <img class="w-100" src="./img/slide/foto2.png" alt="" />
+                </a>
               </div>
-              <a
-                href="https://multipago.bo/protegeunavida"
-                class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center"
+              <div
+                class="mMovil col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
               >
-                <div>
-                  <img
-                    src="./img/isologo_banner.png"
-                    alt=""
-                    style="max-width: 40px;"
-                    class="mx-auto"
-                  />
-                  <p class="text-light">DONAR</p>
+                <div class="text-center">
+                  <p class="font-weight-bold pt-4">TOTAL RECAUDADO (Bs.)</p>
+                  <span class="font-weight-bold color text-primary">1740</span>
+                  <p class="border-top mt-3 pt-2">
+                    Fecha de validez <br />
+                    <span class="text-secondary">---</span>
+                  </p>
                 </div>
-              </a>
+                <a
+                  href="https://multipago.bo/protegeunavida"
+                  class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center"
+                >
+                  <div>
+                    <img
+                      src="./img/isologo_banner.png"
+                      alt=""
+                      style="max-width: 40px;"
+                      class="mx-auto"
+                    />
+                    <p class="text-light">DONAR</p>
+                  </div>
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-        </div>
+          </div>
+          <div class="col-lg-5 col-md-6 mx-auto my-5">
+            <div class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
+          >
+            <div class="row p-2">
+              <div class="col-sm-7 p-0 pad-10">
+                <a href="#">
+                  <img class="w-100" src="./img/slide/foto3.png" alt="" />
+                </a>
+              </div>
+              <div
+                class="mMovil col-12 col-sm-5 d-flex align-items-center justify-content-center ayuda_enlace position-relative"
+              >
+                <div class="text-center">
+                  <p class="font-weight-bold pt-4">TOTAL RECAUDADO (Bs.)</p>
+                  <span class="font-weight-bold color text-primary">1740</span>
+                  <p class="border-top mt-3 pt-2">
+                    Fecha de validez <br />
+                    <span class="text-secondary">---</span>
+                  </p>
+                </div>
+                <a
+                  href="#"
+                  class="position-absolute on on--hover my-auto d-flex align-items-center justify-content-center"
+                >
+                  <div>
+                    <img
+                      src="./img/isologo_banner.png"
+                      alt=""
+                      style="max-width: 40px;"
+                      class="mx-auto"
+                    />
+                    <p class="text-light">DONAR</p>
+                  </div>
+                </a>
+              </div>
+            </div>
+          </div>
+          </div>
+         </div>
          <!-- <div class="my-5 text-center container-fluid">
             <div class="row d-flex align-items-center">
                <div class="col-1 d-flex align-items-center justify-content-center">
