--- a/index.html
+++ b/index.html
@@ -24,16 +24,38 @@
          </div>
       </header>
       <section class="row p-0">
-         <div class="col-12 p-0">
-            <img class="w-100"  src="./img/banner_portada.jpg" alt="">
-         </div>
+
+
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="./img/banner_portada.jpg" alt="">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="./img/banner_portada2.jpg" alt="">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>        
    </section>
       <!-- Primer Carrusel -->
       <section class="row grayBg py-5">
          <h3 class="col-12 text-center font-weight-bold"><span class="textSpan">Campañas</span> de Donación</h3>
          <!-- Carrusel de empresas -->
-         <div class="row mx-auto">
-          <div class="col-lg-5 col-md-6 mx-auto my-5">
+         <div class="col-10 mx-auto">
+          <div class="row">
+            <div class="col-lg-5 col-md-6 mx-auto my-5 mx-3">
             <div class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
           >
             <div class="row p-2">
@@ -71,7 +93,7 @@
             </div>
           </div>
           </div>
-          <div class="col-lg-5 col-md-6 mx-auto my-5">
+          <div class="col-lg-5 col-md-6 mx-auto my-5 mx-3">
             <div class="col-12 col-md d-flex align-items-center justify-content-center shadow-sm bg-white rounded"
           >
             <div class="row p-2">
@@ -108,7 +130,7 @@
               </div>
             </div>
           </div>
-          </div>
+          </div></div>
          </div>
          <!-- <div class="my-5 text-center container-fluid">
             <div class="row d-flex align-items-center">
@@ -272,11 +294,6 @@
          <div class="my-5 text-center container-fluid">
             <div class="row d-flex align-items-center">
                <div class="col-1 d-flex align-items-center justify-content-center">
-                  <!-- <a href="#carouselEmp" role="button" data-slide="prev">
-                     <div class="carousel-nav-icon">
-                        <img src="./img/flecha_ant.png" />
-                     </div>
-                  </a> -->
                </div>
                <div class="col-10">
                   <!--Start carousel-->
@@ -295,21 +312,15 @@
                     <div class="col-lg-4 col-md-6">
                       <img class="img-fluid" src="./img/apoyan/empresa4.png">
                     </div>
+                    <div class="col-lg-4 col-md-6">
+                      <img class="img-fluid" src="./img/apoyan/empresa5.png">
+                    </div>
                       </div>
 
                     </div>
                 </div>
                   <!--End carousel-->
                </div>
-               <!-- <div class="col-1 d-flex align-items-center justify-content-center"><a href="#carouselEmp"
-                     data-slide="next">
-                     <div class="carousel-nav-icon">
-                        <div class="carousel-nav-icon">
-                           <img src="./img/flecha_sig.png" />
-                        </div>
-                     </div>
-                  </a>
-               </div> -->
             </div>
          </div>
 
@@ -339,8 +350,9 @@
      infinite: true,
      speed: 300,
      dots: false,
+     arrow: true,
      autoplay: true,
-     autoplaySpeed: 1000,
+     autoplaySpeed: 4000,
      slidesToShow: 4,
      slidesToScroll: 1,
      responsive: [
@@ -372,36 +384,6 @@
      ]
    });
      </script>
-   <script>
-
-    function checkWidth() {
-        if ($(window).width() < 514) {
-          $('#myCarousel').removeClass('slide');
-        } else {
-          $('#myCarousel').addClass('slide');
-        }
-    }
-
-    $(window).resize(checkWidth);
-
-$('.carousel .carousel-item').each(function() {
-    var minPerSlide = 4;
-    var next = $(this).next();
-    if (!next.length) {
-        next = $(this).siblings(':first');
-    }
-    next.children(':first-child').clone().appendTo($(this));
-
-    for (var i = 0; i < minPerSlide; i++) {
-        next = next.next();
-        if (!next.length) {
-            next = $(this).siblings(':first');
-        }
-
-        next.children(':first-child').clone().appendTo($(this));
-    }
-});
-   </script>
 </body>
 
 </html>
