ajust dots to slide and reduce paddin and margin to carousel

--- a/index.html
+++ b/index.html
@@ -287,11 +287,11 @@
          </p>
       </section>
       <!-- Empresas que apoyan -->
-      <section class="row py-5">
+      <section class="row pt-5">
          <h2 class="col-12 text-center font-weight-bold"><span class="textSpan">Empresas</span> que apoyan</h2>
 
          <!-- Carrusel de empresas -->
-         <div class="my-5 text-center container-fluid">
+         <div class="mt-5 text-center container-fluid">
             <div class="row d-flex align-items-center">
                <div class="col-1 d-flex align-items-center justify-content-center">
                </div>
